--- a/src/main/resources/application.example.yml
+++ b/src/main/resources/application.example.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: updatePlayerQuizStatus
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
     properties:
       hibernate:
