--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
             <artifactId>google-api-client</artifactId>
             <version>1.30.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
     </dependencies>
 
     <build>
